--- a/package.json
+++ b/package.json
@@ -20,22 +20,26 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native-mocks/sqlite": "^2.0.6",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/sqlite": "^4.4.2",
+    "@ionic-native/sqlite": "^4.5.2",
     "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/toast": "^4.5.2",
     "@ionic/pro": "1.0.11",
     "@ionic/storage": "2.0.1",
+    "angular-star-rating": "^2.0.0-rc.5",
     "cordova-android": "6.3.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-browser": "5.0.2",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.1.2",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "^2.6.0",
+    "cordova-sqlite-storage": "^2.1.4",
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -53,10 +57,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
